black[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["mischuk sergey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
